Add profile image and update styling

--- a/index.html
+++ b/index.html
@@ -7,51 +7,94 @@
 </head>
 <body>
 
-<header>
-    <h1>Shweta Landage</h1>
-    <p>Aspiring Data Scientist | Python | Machine Learning</p>
+<!-- Hero Section: Left = Details, Right = Profile Photo -->
+<header class="hero">
+    <div class="hero-content">
+        <!-- Left: Personal Info -->
+        <div class="hero-text">
+            <h1>Shweta Landage</h1>
+            <p>Phone: 7620370484</p>
+            <p>Location: Pune, India</p>
+            <p>Data Scientist | Python | ML | Deep Learning | AI | NLP</p>
+        </div>
+
+        <!-- Right: Profile Photo -->
+        <div class="profile-photo-container">
+            <img src="profile.jpg" alt="Shweta Landage" class="profile-photo">
+        </div>
+    </div>
 </header>
 
-<section>
-    <h2>About Me</h2>
-    <p>
-        I am a B.Com graduate currently transitioning into Data Science.
-        I work with Python and Machine Learning to build practical, end-to-end projects.
-    </p>
-</section>
+<main>
+    <!-- About Me -->
+    <section>
+        <h2>About Me</h2>
+        <p>
+            I am a B.Com graduate transitioning into Data Science.
+            I work with Python, Machine Learning, Deep Learning, and NLP to build practical, end-to-end projects.
+        </p>
+    </section>
 
-<section>
-    <h2>Skills</h2>
-    <ul>
-        <li>Python</li>
-        <li>Pandas, NumPy</li>
-        <li>Machine Learning</li>
-        <li>FastAPI, Streamlit</li>
-        <li>Git & GitHub</li>
-    </ul>
-</section>
+    <!-- Skills -->
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Power BI</li>
+            <li>Machine Learning (ML)</li>
+            <li>Deep Learning (DL)</li>
+            <li>Natural Language Processing (NLP)</li>
+            <li>Large Language Models (LLM)</li>
+            <li>Artificial Intelligence (AI)</li>
+            <li>FastAPI, Streamlit</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
 
-<section>
-    <h2>Projects</h2>
+    <!-- Projects -->
+    <section>
+        <h2>Projects</h2>
+        <div class="projects">
+            <div class="project-card">
+                <h3>Loan Approval Prediction</h3>
+                <p>Machine learning model to predict loan approval status based on applicant data.</p>
+            </div>
+            <div class="project-card">
+                <h3>Health Insurance Premium Prediction</h3>
+                <p>Regression model to estimate insurance premium amounts for individuals.</p>
+            </div>
+            <div class="project-card">
+                <h3>Agentic AI Call Center</h3>
+                <p>AI-powered assistant using LLMs, FastAPI, and Streamlit to simulate telecom support.</p>
+            </div>
+            <div class="project-card">
+                <h3>PDF Question-Answering LLM</h3>
+                <p>A project that uses LLMs to answer questions from PDF documents efficiently.</p>
+            </div>
+        </div>
+    </section>
 
-    <h3>Loan Approval Prediction</h3>
-    <p>Machine learning model to predict loan approval status.</p>
+    <!-- Contact -->
+    <section>
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:shwetalandageraut@gmail.com">shwetalandageraut@gmail.com</a></p>
+        <p>
+          GitHub: <a href="https://github.com/shweta-landage" target="_blank">
+    shweta-landage
+</a><br>
 
-    <h3>Health Insurance Premium Prediction</h3>
-    <p>Regression model to estimate insurance premium amounts.</p>
+LinkedIn: <a href="https://www.linkedin.com/in/shweta7620" target="_blank">
+    shweta7620
+</a><br>
 
-    <h3>Agentic AI Call Center</h3>
-    <p>AI-powered assistant using LLMs, FastAPI, and Streamlit.</p>
-</section>
 
-<section>
-    <h2>Contact</h2>
-    <p>Email: your-email@example.com</p>
-    <p>
-        GitHub: https://github.com/shweta-landage <br>
-        LinkedIn: add-link-here
-    </p>
-</section>
+
+</a>
+
+        </p>
+    </section>
+</main>
 
 </body>
 </html>
